@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-block/open-iscsi/ChangeLog,v 1.12 2007/02/22 00:59:56 jokey Exp $
 
+*upkern-9999 (27 Mar 2012)
+
+  27 Mar 2012; <alunduil@gentoo.org> +upkern-9999.ebuild:
+  Added a live ebuild for upkern
+
   27 Mar 2012; <alunduil@gentoo.org> -upkern-2.0.14.ebuild,
   -upkern-3.1.6.ebuild, -upkern-3.1.7.ebuild:
   Removed older versions that are no longer or should be no longer in use
